demo: Fix vertical spacing in icons demo
Follow-up to 0e6c4b89ceeb95f7953bf7933b3c374c51da8cba.

--- a/demos/styles/demo.css
+++ b/demos/styles/demo.css
@@ -68,6 +68,7 @@ p {
 
 .oo-ui-demo-icons .oo-ui-fieldLayout {
 	display: inline-block;
+	margin-top: 0;
 	margin-bottom: 0;
 }
 
